--- a/.env
+++ b/.env
@@ -8,7 +8,7 @@ VITE_API_KEY = "ur2740986-f412a18a5807ee7564f7afa0"
 
 # 站点信息
 VITE_SITE_NAME = "迎风起降的站点监测"
-VITE_SITE_KEYWORDS = "站点监测,监测,监控"
+VITE_SITE_KEYWORDS = "站点监测,监测"
 VITE_SITE_DES = "一个简约的站点监测"
 
 # ICP 备案
